More site up and running stuff

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
   <title>Toobz</title>
 
-  <script src='jquery.js'></script>  
-  <script src='flatdoc.js'></script>
+  <script src='support/jquery.js'></script>  
+  <script src='support/flatdoc.js'></script>
 
   <!-- Flatdoc theme -->
-  <link  href='style.css' rel='stylesheet'>
-  <script src='script.js'></script>
-  <link  href='theme.css' rel='stylesheet'>
-  <script src='theme.js'></script>
+  <link  href='support/style.css' rel='stylesheet'>
+  <script src='support/script.js'></script>
+  <link  href='support/theme.css' rel='stylesheet'>
+  <script src='support/theme.js'></script>
 
   <!-- Initializer -->
   <script>
@@ -36,7 +36,7 @@
     });
   </script>
 </head>
-<body role='flatdoc'>
+<body role='flatdoc' class='no-literate'>
 
   <div class='header'>
     <div class='left'>
